# SFML_TEST

./: CMakeLists.txt  README.md  SFML_Test.kdev4  bubbles.cpp  compile.sh  main.cpp
cmake_modules/: Toolchain-cross-mingw64-linux.cmake
src/: bubbles.cpp  bubbles.h  ui.cpp  ui.h
